syntax = "proto3";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message UnlockFeatureRewardDTO {
  int32 Id = 1;
}
